# macti-v3

./: .copilot-commit-message-instructions.md  .pre-commit-config.yaml  CONTRIBUTING.md  README.md
.agents/: AGENTS.md  skills.json
backend/: .copilot-commit-message-instructions.md  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/.agents/: AGENTS.md
backend/.agents/skills/macti-backend-arch/: SKILL.md
backend/.agents/skills/macti-backend-db/: SKILL.md
backend/.agents/skills/macti-backend-git/: SKILL.md
backend/.agents/skills/macti-backend-workflow/: SKILL.md
backend/.github/workflows/: ci-cd.yml
backend/app/: main.py
backend/app/core/cache/: redis_client.py
backend/app/core/db/: database.py
backend/app/core/logging/: config.py  implementacion.py  macti_logger.py
backend/app/modules/courses/: routes.py  schemas.py
backend/app/modules/nbgrader/: routes.py  schemas.py
backend/app/modules/register/: routes.py  schemas.py
backend/app/modules/temp/: routes.py
backend/app/shared/config/: kc_configs.py  moodle_configs.py
backend/app/shared/dependecies/: auth_current_user.py  auth_scope_course_manager.py  auth_scopes_base.py  auth_verify.py
backend/app/shared/enums/: institutes_enum.py  role_enum.py  role_moodle_enum.py  status_enum.py
backend/app/shared/models/: __init__.py  auth_model.py  jids_model.py  student_courses_model.py  teacher_courses_model.py  user_profiles_model.py  verification_tokens_model.py
backend/utils/http/: email.http  test.http
(+158 files in other folders)
