[project]
name = "MACTI-API"
version = "0.1.0"
description = "Backend de la plataforma MACTI."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "email-validator>=2.3.0",
    "fastapi[standard]>=0.120.0",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "pre-commit>=4.3.0",
    "psycopg[binary,pool]>=3.3.4",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.11.0",
    "python-jose>=3.5.0",
    "redis>=8.0.1",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
]

[tool.fastapi]
entrypoint = "app.main:app"

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "ruff>=0.14.2",
]

[tool.ruff]
lint.select = [
  "E", "W", "F", "I", "UP",  # Base + imports + modernización
  "B", "SIM", "C4", "N",     # Buenas prácticas y estilo
  "S", "FBT",                # Seguridad y claridad
  "ARG",                     # Tipado
]
lint.ignore = ["E501", "B008"]  # Ignora línea larga, el formateador se encarga

[tool.ruff.lint.per-file-ignores]
"app/core/db/alembic/versions/*.py" = ["F401"]  # Ignora importaciones no utilizadas

[tool.pyright]
venvPath = "."
venv = ".venv"